fix: console thrown player null